spinner issue username, all loaders and style alignment

--- a/JobManger_V2/src/app/Components/job-details/job-details.component.css
+++ b/JobManger_V2/src/app/Components/job-details/job-details.component.css
@@ -6,6 +6,12 @@
   height: 100%;
   top: 0;
 }
+#gridstyle{
+  right: 0px; bottom: 4%; position: fixed; left: 0px; top: 82px;
+}
+#cellstyle{
+  text-align: left
+}
 .wrapper {
   display: flex;
   justify-content: center;
